--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "gatsby": "^2.0.81",
     "gatsby-plugin-react-helmet": "^3.0.5",
+    "gatsby-source-filesystem": "^2.0.12",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0"
